# gptoss-120-server

./: .gitignore  AGENTS.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  cloudbuild.yaml  kgen.trace.json.time-trace  pixi.toml  pyproject.toml
.github/workflows/: build-and-push.yml
.runpod/: hub.json  tests.json
custom_ops/: __init__.py
custom_ops/kernels/: mxfp4.mojo
kernels/: __init__.mojo  mxfp4_kernels.mojo
scripts/: cloud_build.sh  deploy.sh  runpod_up.sh  stop.sh
serve/: model_loader.py  requirements.txt  responses_server.py  start.sh
server/: __init__.py  responses_app.py
src/gpt_oss_max/: __init__.py  mxfp4_linear.py
src/gpt_oss_max/architecture/: __init__.py  arch.py  model.py
tests/: test_responses_server.py
