[project]
name = "max-gpt-oss-mxfp4"
version = "0.1.0"
description = "GPT-OSS on MAX with custom MXFP4 kernels + Responses API shim"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "openai-harmony<=0.0.4",
  "huggingface_hub>=0.23",
  "numpy>=1.24",
  "ruff>=0.14.0",
  "ty>=0.0.1a22",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.setuptools.packages.find]
where = ["src"]
